# macaw

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  release.toml
snapshots/: public_api.snap
src/: affine3.rs  bounding_box.rs  color_rgba8.rs  conformal.rs  dual_quat.rs  fixed.rs  float_ext.rs  iso_transform.rs  lib.rs  mat3_ext.rs  plane3.rs  ray3.rs  utils.rs  vec2_ext.rs  vec3_ext.rs  vec4_ext.rs
